Add SequencedCollection to BANNED_INTERFACE_TYPES
This is done because this type exists in Java 21
but not Java 17.

Fixes: #37768